--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -1,5 +1,4 @@
 meta:
-  environment: (( param "please set environment" ))
   stemcell: (( param "please set stemcell" ))
 
 name: (( grab meta.environment ))
@@ -18,9 +17,9 @@ compilation:
 
 update:
   canaries: 1
-  max_in_flight: 1
-  canary_watch_time: 30000-60000
-  update_watch_time: 5000-60000
+  max_in_flight: 50
+  canary_watch_time: 1000-60000
+  update_watch_time: 1000-60000
   serial: false
 
 resource_pools:
@@ -28,3 +27,5 @@ resource_pools:
     network: broker_registrar1
     stemcell: (( grab meta.stemcell ))
     cloud_properties: (( param "please set resource_pool cloud properties" ))
+
+networks: (( param "please set networks" ))
