--- a/templates/infrastructure-warden.yml
+++ b/templates/infrastructure-warden.yml
@@ -12,7 +12,10 @@ update:
   update_watch_time: 1000-30000
 
 jobs:
-  - name: just_install_packages
+  - name: broker-registrar
+    networks:
+      - name: broker_registrar1
+  - name: broker-deregistrar
     networks:
       - name: broker_registrar1
 
@@ -29,8 +32,8 @@ networks:
 - name: broker_registrar1
   type: manual
   subnets:
-  - range: 10.244.2.0/24
+  - range: 10.244.30.0/24
     name: broker_registrar1
-    gateway: 10.244.2.1
+    gateway: 10.244.30.1
     static:
-      - 10.244.2.2-10.244.2.60
+      - 10.244.30.2-10.244.3.60
