--- a/templates/jobs.yml
+++ b/templates/jobs.yml
@@ -1,23 +1,31 @@
-meta:
-  environment: ~
-
-update:
-  canaries: 1
-  max_in_flight: 50
-  canary_watch_time: 1000-30000
-  update_watch_time: 1000-30000
-  serial: false
-
 jobs:
-  - name: just_install_packages
-    templates:
-    - name: just_install_packages
-      release: broker-registrar
-    instances: 1
-    persistent_disk: 0
-    resource_pool: small_z1
-    networks: (( param "please set just_install_package networks" ))
+- instances: 1
+  lifecycle: errand
+  name: broker-registrar
+  networks: (( param "please set broker-registrar networks" ))
+  resource_pool: small_z1
+  templates:
+  - name: broker-registrar
+    release: broker-registrar
+- instances: 1
+  lifecycle: errand
+  name: broker-deregistrar
+  resource_pool: small_z1
+  networks: (( param "please set broker-deregistrar networks" ))
+  templates:
+  - name: broker-deregistrar
+    release: broker-registrar
 
-networks: (( param "please set networks" ))
+properties:
+  cf:
+    admin_username: (( param "please provide a username with which to connect to CF" ))
+    admin_password: (( param "please provide a password with which to connect to CF" ))
+    api_url: (( param "please provide the CF api URL" ))
+  broker:
+    name: (( param "please give the broker to be registered/deregistered a name" ))
+    host: (( param "please specify the IP/hostname that should be used to contact this broker" ))
+    port: 443
+    protocol: https
+    username: (( param "please specify a username that CF will use to access the broker API" ))
+    password: (( param "please specify a password that CF will use to access the broker API" ))
 
-properties: {}
