--- a/.final_builds/jobs/broker-deregistrar/index.yml
+++ b/.final_builds/jobs/broker-deregistrar/index.yml
@@ -4,4 +4,8 @@ builds:
     version: 30015fee8a0532ac7e5b72080dca95e85b810eda
     sha1: 354b9b89f81eca25a5ad153985b70fb90bb874db
     blobstore_id: b32003dc-d610-4b9a-a00b-8637847899c3
+  caa62e4bb60973df8590f604fe58f0968be531ea:
+    version: caa62e4bb60973df8590f604fe58f0968be531ea
+    sha1: 06dfba00ddf0c954029f772f3d1c69f4d826a5a0
+    blobstore_id: 1853201c-a65c-461c-bde0-a705650aae8b
 format-version: '2'
