--- a/.final_builds/jobs/broker-registrar/index.yml
+++ b/.final_builds/jobs/broker-registrar/index.yml
@@ -4,4 +4,8 @@ builds:
     version: 9f566e65b9c68b62521b77ea3105afe9f654396b
     sha1: cfd83ea929a2210327b475e33a49fb8d30eb66ed
     blobstore_id: 9f6e1986-893f-4a05-9833-51aefa32117a
+  9b2b13745935b3f73e52fa9130aed4b78ec441dc:
+    version: 9b2b13745935b3f73e52fa9130aed4b78ec441dc
+    sha1: d395d21c4bab82fe0529320f8cf2f089768fe54b
+    blobstore_id: 62b86035-7074-48b5-bd49-9c8950b44e6f
 format-version: '2'
