--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -2,3 +2,7 @@ cf-cli/cf-cli_6.25.0_linux_x86-64.tgz:
   size: 5088758
   object_id: ab9f1e66-6a83-44aa-69a0-a27b127885d5
   sha: 82728ff9fed87554a14a2e5d2b4b743b8f2885ae
+jq/jq-linux64-1.5:
+  size: 3027945
+  object_id: fecbf83a-1909-4965-5ab1-186b4486fe1a
+  sha: d8e36831c3c94bb58be34dd544f44a6c6cb88568
