--- a/.final_builds/packages/cf-cli/index.yml
+++ b/.final_builds/packages/cf-cli/index.yml
@@ -1,7 +1,10 @@
----
 builds:
   63e2ade4cb18f1622c8054a2dfbd9f31c80f26c2:
     version: 63e2ade4cb18f1622c8054a2dfbd9f31c80f26c2
-    sha1: b2a4ed95a157de06fdc69b05c8b1369e3714c3cd
     blobstore_id: c55d98c7-f05f-4006-b7cd-c5fd9bbb8aa2
-format-version: '2'
+    sha1: b2a4ed95a157de06fdc69b05c8b1369e3714c3cd
+  e0e28f73e7205d90e5e0970c00fa714a0374d288:
+    version: e0e28f73e7205d90e5e0970c00fa714a0374d288
+    blobstore_id: f0ae4e44-54c1-459a-4326-a1fea24a52ab
+    sha1: 7757ffb8083d26144a6db7f036669e2707a6297a
+format-version: "2"
