--- a/manifests/op-add-errands.yml
+++ b/manifests/op-add-errands.yml
@@ -41,3 +41,9 @@
     jobs:
     - name: broker-deregistrar
       release: broker-registrar
+      properties:
+        cf:
+          api_url: ((cf_api_url))
+          username: ((cf_admin_username))
+          password: ((cf_admin_password))
+          skip_ssl_validation: ((cf_skip_ssl_validation))
