--- a/releases/broker-registrar/index.yml
+++ b/releases/broker-registrar/index.yml
@@ -1,4 +1,6 @@
 builds:
+  2e93bad3-f076-4bd7-7aa0-0844fb0a183b:
+    version: 3.1.0
   6be88655-4f58-4580-8c2b-d5480e7fa79f:
     version: "1"
   be5d9042-a46e-45d8-5d68-3aaf1ae06e21:
