--- a/releases/broker-registrar/index.yml
+++ b/releases/broker-registrar/index.yml
@@ -3,6 +3,8 @@ builds:
     version: 3.1.0
   6be88655-4f58-4580-8c2b-d5480e7fa79f:
     version: "1"
+  b215b617-d259-480e-68e8-4d2ff8ed9d89:
+    version: 3.1.1
   be5d9042-a46e-45d8-5d68-3aaf1ae06e21:
     version: 3.0.0
   f9ab3bf5-f0b1-4583-ae2f-aedf66d66452:
