--- a/.final_builds/jobs/broker-deregistrar/index.yml
+++ b/.final_builds/jobs/broker-deregistrar/index.yml
@@ -11,6 +11,10 @@ builds:
     version: caa62e4bb60973df8590f604fe58f0968be531ea
     blobstore_id: 1853201c-a65c-461c-bde0-a705650aae8b
     sha1: 06dfba00ddf0c954029f772f3d1c69f4d826a5a0
+  f5367a82b1fcfeda23c7d00982df157db071c778:
+    version: f5367a82b1fcfeda23c7d00982df157db071c778
+    blobstore_id: 7fc5a23a-50f8-4d87-758b-ba9bba3601ee
+    sha1: 9627fc7b9efbc7ddcd92a6e76a4a9b9c665d7fd7
   f90a215236c48f1f58c8b77adad26706006d9e4b:
     version: f90a215236c48f1f58c8b77adad26706006d9e4b
     blobstore_id: defce21c-bb9f-48bb-6020-819563c0bc65
