switch to hyphenated variable names

--- a/manifests/broker-registrar.yml
+++ b/manifests/broker-registrar.yml
@@ -15,13 +15,13 @@ instance_groups:
     consumes:
       servicebroker:
         from: servicebroker
-        deployment: ((servicebroker_deployment))
+        deployment: ((servicebroker-deployment))
     properties:
       cf:
-        api_url: ((cf_api_url))
-        username: ((cf_admin_username))
-        password: ((cf_admin_password))
-        skip_ssl_validation: ((cf_skip_ssl_validation))
+        api_url: ((cf-api-url))
+        username: ((cf-admin-username))
+        password: ((cf-admin-password))
+        skip_ssl_validation: ((cf-skip-ssl-validation))
 
 - name: broker-deregistrar
   instances: 1
@@ -36,13 +36,13 @@ instance_groups:
     consumes:
       servicebroker:
         from: servicebroker
-        deployment: ((servicebroker_deployment))
+        deployment: ((servicebroker-deployment))
     properties:
       cf:
-        api_url: ((cf_api_url))
-        username: ((cf_admin_username))
-        password: ((cf_admin_password))
-        skip_ssl_validation: ((cf_skip_ssl_validation))
+        api_url: ((cf-api-url))
+        username: ((cf-admin-username))
+        password: ((cf-admin-password))
+        skip_ssl_validation: ((cf-skip-ssl-validation))
 
 releases:
 - name: broker-registrar
