--- a/.final_builds/jobs/broker-deregistrar/index.yml
+++ b/.final_builds/jobs/broker-deregistrar/index.yml
@@ -11,6 +11,10 @@ builds:
     version: caa62e4bb60973df8590f604fe58f0968be531ea
     blobstore_id: 1853201c-a65c-461c-bde0-a705650aae8b
     sha1: 06dfba00ddf0c954029f772f3d1c69f4d826a5a0
+  e870a36c357affa6a0ba372a4d72312b8c5e59fd:
+    version: e870a36c357affa6a0ba372a4d72312b8c5e59fd
+    blobstore_id: 127d3f64-f11e-4775-775d-56a70c24df98
+    sha1: 2113ecb7d78e59bbece61d1033961577b48ad8f3
   f5367a82b1fcfeda23c7d00982df157db071c778:
     version: f5367a82b1fcfeda23c7d00982df157db071c778
     blobstore_id: 7fc5a23a-50f8-4d87-758b-ba9bba3601ee
