--- a/.final_builds/jobs/broker-registrar/index.yml
+++ b/.final_builds/jobs/broker-registrar/index.yml
@@ -7,6 +7,10 @@ builds:
     version: 48e9593de337bd8042b34750830ec816d507ff33
     blobstore_id: 552258f3-e12c-491a-5ebb-7daaa73da8fb
     sha1: ed153629cf03a368054fed84a8688035ed80faea
+  5bac0d37aa9b19c686c0caf452650833fc315e0e:
+    version: 5bac0d37aa9b19c686c0caf452650833fc315e0e
+    blobstore_id: 70a3e36e-5ce6-4acb-4d9b-631e51876859
+    sha1: e2a08c020624a8f389d77b8ebb9818cff01736fc
   6c9ced9f952c3fe4f9caec88d31168e090bd0e8d:
     version: 6c9ced9f952c3fe4f9caec88d31168e090bd0e8d
     blobstore_id: 35164115-a94f-47d3-51fe-08857f738c6a
