--- a/manifests/op-add-errands.yml
+++ b/manifests/op-add-errands.yml
@@ -3,10 +3,9 @@
   path: /releases/-
   value:
     name: broker-registrar
-    version: latest
-    # version: 2.0.0
-    # url: https://bosh.io/d/github.com/cloudfoundry-community/broker-registrar-boshrelease?v=2.0.0
-    # sha1: 83b61f06e43c27845deb59597504e55ee887897e
+    version: 3.2.0
+    url: https://bosh.io/d/github.com/cloudfoundry-community/broker-registrar-boshrelease?v=3.2.0
+    sha1: c3c816470e32d6957fcda1b19c1647ff9acba8e2
 
 - type: replace
   path: /instance_groups/-
