--- a/.final_builds/jobs/broker-registrar/index.yml
+++ b/.final_builds/jobs/broker-registrar/index.yml
@@ -27,6 +27,10 @@ builds:
     version: 9f566e65b9c68b62521b77ea3105afe9f654396b
     blobstore_id: 9f6e1986-893f-4a05-9833-51aefa32117a
     sha1: cfd83ea929a2210327b475e33a49fb8d30eb66ed
+  a99a7654ad14bec71d6b337adf4383b5bcae8eb2:
+    version: a99a7654ad14bec71d6b337adf4383b5bcae8eb2
+    blobstore_id: e30756b7-50e0-4d15-7fbd-4aa79c59907c
+    sha1: 62a44931581110649e94948ef428811de3e737bf
   e4c7ce39994f16e373a8d106cac3b06734cc6c6e:
     version: e4c7ce39994f16e373a8d106cac3b06734cc6c6e
     blobstore_id: 5a002262-64ce-46b8-79bd-cab18b734c37
