--- a/releases/broker-registrar/index.yml
+++ b/releases/broker-registrar/index.yml
@@ -1,6 +1,8 @@
 builds:
   2e93bad3-f076-4bd7-7aa0-0844fb0a183b:
     version: 3.1.0
+  4b10e9d6-6a8b-4ff0-4753-21e1ef9c1792:
+    version: 3.2.1
   6be88655-4f58-4580-8c2b-d5480e7fa79f:
     version: "1"
   b215b617-d259-480e-68e8-4d2ff8ed9d89:
