--- a/.final_builds/jobs/broker-registrar/index.yml
+++ b/.final_builds/jobs/broker-registrar/index.yml
@@ -31,6 +31,10 @@ builds:
     version: a99a7654ad14bec71d6b337adf4383b5bcae8eb2
     blobstore_id: e30756b7-50e0-4d15-7fbd-4aa79c59907c
     sha1: 62a44931581110649e94948ef428811de3e737bf
+  d9e3eb68dd857f8d328cd165e98a0fa1065a6a65:
+    version: d9e3eb68dd857f8d328cd165e98a0fa1065a6a65
+    blobstore_id: bc5ae56a-7cb0-4ae0-63fb-900941401b5d
+    sha1: a0f1374b9d01e53d2412f17c4b935b0595f44038
   e4c7ce39994f16e373a8d106cac3b06734cc6c6e:
     version: e4c7ce39994f16e373a8d106cac3b06734cc6c6e
     blobstore_id: 5a002262-64ce-46b8-79bd-cab18b734c37
