--- a/releases/broker-registrar/index.yml
+++ b/releases/broker-registrar/index.yml
@@ -11,6 +11,8 @@ builds:
     version: 3.0.0
   c64b02c8-1eb1-4e19-56e6-5a992aed24f6:
     version: 3.2.2
+  ccd39e17-d161-46ab-75b8-09cfd6c07835:
+    version: 3.2.3
   d666266c-2a6c-4361-46b8-ff1e6c2d993c:
     version: 3.1.2
   d9d20ace-0ff4-46ac-75fd-e2b726425192:
