base vm_type to match cf-deployment 'minimal'

--- a/manifests/broker-registrar.yml
+++ b/manifests/broker-registrar.yml
@@ -6,7 +6,7 @@ instance_groups:
   instances: 1
   azs: [z1]
   lifecycle: errand
-  vm_type: default
+  vm_type: minimal
   stemcell: default
   networks: [{name: default}]
   jobs:
@@ -28,7 +28,7 @@ instance_groups:
   instances: 1
   azs: [z1]
   lifecycle: errand
-  vm_type: default
+  vm_type: minimal
   stemcell: default
   networks: [{name: default}]
   jobs:
